--- a/data/clients/1.yaml
+++ b/data/clients/1.yaml
@@ -1,3 +1,3 @@
 name: "Monitor Do Mercado"
 image: "img/monitor-logo-amarelo.png"
-url: "monitordomercado.com.br"
+url: "http://monitordomercado.com.br"
