--- a/data/clients/2.yaml
+++ b/data/clients/2.yaml
@@ -1,3 +1,3 @@
 name: "customer-2"
-image: "img/monitor-logo-amarelo.png"
-url: "http://www.customer2.com"
+image: "img/hoteldom.jpg"
+url: "https://hoteldomhenrique.com.br"
