--- a/data/clients/3.yaml
+++ b/data/clients/3.yaml
@@ -1,3 +1,3 @@
 name: "customer-3"
-image: "img/monitor-logo-amarelo.png"
-url: "http://www.customer3.com"
+image: "img/diletante.jpg"
+url: "https://diletante.com.br"
