--- a/config.toml
+++ b/config.toml
@@ -60,11 +60,11 @@ pluralizelisttitles = false
     url = "tel:+12 34 567 89 01"
     pre = "<i class='fas fa-2x fa-phone'></i>"
 
-[[menu.topbar]]
-    weight = 2
-    name = "GitHub"
-    url = "/"
-    pre = "<i class='fab fa-2x fa-github'></i>"
+#[[menu.topbar]]
+#   weight = 2
+#   name = "GitHub"
+#   url = "/"
+#   pre = "<i class='fab fa-2x fa-github'></i>"
 
 [[menu.topbar]]
     weight = 3
@@ -150,7 +150,7 @@ pluralizelisttitles = false
 
     disabled_logo = false
     logo_text = "Linky"
-
+    logo_footer = "img/logo_footer.png"
     logo = "img/logoo.png"
     logo_small = "img/logo-small.png"
     contact_url = "/contact"
