implementation to features pages

--- a/data/features/Consultoria.yaml
+++ b/data/features/Consultoria.yaml
@@ -1,5 +1,5 @@
 weight: 4
 name: "Consultoria"
 icon: "fas fa-lightbulb"
-url: ""
+url: "/consultoria"
 description: "Temos um time de experts em portais institucionais, sistema de gestão da aprendizagem, aplicativos Web e sistemas de comunicação e interação disponível para oferecer sugestões em decisões, arquitetura em seu negócio."
