--- a/data/features/sistemas.yaml
+++ b/data/features/sistemas.yaml
@@ -1,5 +1,5 @@
 weight: 3
 name: "Sistemas"
 icon: "fas fa-globe"
-url: ""
+url: "/sistemas"
 description: "Levantamento de requisitos, design e layout para o desenvolvimento de sites, portais, sistemas de gestão da aprendizagem (LMS), Web services com Drupal, Gohugo, Moodle e Node.js."
