--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ pluralizelisttitles = false
     weight = 1
     name = "Phone"
     url = "tel:+12 34 567 89 01"
-    pre = "<i class='fas fa-2x fa-phone'></i>"
+    pre = "<i class='fas fa-2x fa-whatsapp'></i>"
 
 #[[menu.topbar]]
 #   weight = 2
