--- a/config.toml
+++ b/config.toml
@@ -26,6 +26,7 @@ pluralizelisttitles = false
     identifier = "menu.home"
     url        = "/"
     weight     = 1
+    
 
 [[menu.main]]
     name       = "Projetos"
@@ -57,8 +58,8 @@ pluralizelisttitles = false
 [[menu.topbar]]
     weight = 1
     name = "Phone"
-    url = "tel:+12 34 567 89 01"
-    pre = "<i class='fas fa-2x fa-whatsapp'></i>"
+    url = "https://api.whatsapp.com/send?phone=5521976999890"
+    pre = "<i class='fas fa-2x fa-phone'></i>"
 
 #[[menu.topbar]]
 #   weight = 2
@@ -155,9 +156,9 @@ pluralizelisttitles = false
     logo_small = "img/logo-small.png"
     contact_url = "/contact"
     address = """<p class="text-uppercase"><strong>Linky system.</strong>
-        <br>Rua brazil, duque de caxias
-        <br>rio de janeiro,
-        <strong>Brazil</strong>
+        <br>From Brazil
+        <br>to the 
+        <strong>world</strong>
       </p>
       """
 
@@ -167,7 +168,7 @@ pluralizelisttitles = false
 # Enable or disable top bar with social icons
 [params.topbar]
     enable = true
-    text = """<p class="hidden-sm hidden-xs">Contate-nos 21 9 9999-8888 ou contato@linkysystem.com</p>
+    text = """<p class="hidden-sm hidden-xs">contato@linkysystem.com</p>
       <p class="hidden-md hidden-lg"><a href="tel:9999-9999" data-animate-hover="pulse"><i class="fas fa-phone"></i></a>
       <a href="mailto:contato@linkysystem.com" data-animate-hover="pulse"><i class="fas fa-envelope"></i></a>
       </p>
