--- a/data/carousel/multipurpose.yaml
+++ b/data/carousel/multipurpose.yaml
@@ -1,4 +1,4 @@
 weight: 1
-title: "​Linky System"
-description: "<p>foi criada para oferecer sites eficientes e inteligentes e soluções estratégicas em tecnologia e informação</p>"
-image: "img/carousel/template-homepage.png"
+title: "​Linky"
+description: "<p>Soluções tecnológicas com eficiencia.<br>Nossos clientes em primeiro lugar.</p>"
+image: "img/carousel/slide-1.png"
