--- a/data/carousel/multipurpose.yaml
+++ b/data/carousel/multipurpose.yaml
@@ -1,4 +1,4 @@
 weight: 1
 title: "​Linky"
-description: "<p>Soluções tecnológicas com eficiencia.<br>Nossos clientes em primeiro lugar.</p>"
+description: "<p>Soluções tecnológicas com eficiencia.<br>Sites, automação, bots e desenvolvimento customizado.</p>"
 image: "img/carousel/slide-1.png"
