--- a/config.toml
+++ b/config.toml
@@ -162,7 +162,7 @@ pluralizelisttitles = false
       """
 
 [permalinks]
-    blog = "/blog/:year/:month/:day/:filename/"
+    blog = "/blog/:filename/"
 
 # Enable or disable top bar with social icons
 [params.topbar]
